--- a/stylee.css
+++ b/stylee.css
@@ -353,10 +353,9 @@ body {
         width: 350px;
         background-color: black;
     }
-    .hambeg{
+    .hambeg {
         display: block ;
     }
-    
     /* Cards ko 2 columns mein dikhane ke liye */
     .cardcontainer{
         width: 100%;
@@ -366,6 +365,7 @@ body {
         padding: 10px;
         justify-items: center;
         overflow-y: auto;
+        max-width: 96vw;
         max-height: calc(100vh - 200px);
     }
     
@@ -374,12 +374,9 @@ body {
         max-width: 200px;
         height: 240px;
         margin: 0 !important;
+        padding: 0px 50px;
     }
-    
-    html .cardcontainer{
-        width: 100%;
-    }
-    
+        
     .right{
         display: flex;
         width: 100vw;
@@ -387,7 +384,8 @@ body {
     
     .content {
         width: 100%;
-        padding-bottom: 100px;
+        padding-bottom: 10px;
+        bottom: 0;
     }
     
     /* Playbar ko fix karne ke liye*/ 
@@ -395,6 +393,7 @@ body {
         width: 95vw;
         height: auto;
         padding: 15px 10px;
+        position: relative;
         bottom: 10px;
     }
     
